--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -28,7 +28,8 @@
       </div>
       <div class="row d-flex justify-content-center ">
         <div class="col-md-8  d-flex justify-content-center">
-          <button class="btn btn-dark mr-3 button" data-toggle="modal" data-target="#novaPostagem">Nova Mentoria</button>
+          <button class="btn btn-dark mr-3 button" data-toggle="modal" data-target="#novaPostagem">Nova
+            Mentoria</button>
           <button class="btn btn-outline-dark button" href="#postagens">Ver Postagens</button>
         </div>
       </div>
@@ -56,15 +57,21 @@
   <div class="tab-content mt-5" id="nav-tabContent">
     <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
 
-      <div class="card-columns">
-        <div class="card" style="width: 18rem;" *ngFor='let item of listaPostagens'>
+      <div class="row row-cols-12 row-cols-md-4 mt-5 d-flex justify-content-center">
+        <div class="card card-component mt-4 mr-4" *ngFor='let item of listaPostagens'>
+          <div class="card-head">
+            <img src="{{item.liveLink}}" alt="">
+          </div>
           <div class="card-body">
             <h5 class="card-title">{{item.titulo}}</h5>
-            <h6 class="card-subtitle mb-2 text-muted">{{item.usuario.nome}}</h6>
-            <p class="">{{item.tema.descricao}}</p>
-            <p class="card-text">{{item.descricao}}</p>
-            <p class="">{{item.dataPublicacao | date: 'dd/MM/yyyy'}} às {{item.dataPublicacao | date: 'HH:mm'}}</p>
-
+            <p class="text-center descricao">{{item.tema.descricao}}</p>
+            <p class="card-text text-center">{{item.descricao}}</p>
+            <!-- <p class="text-center">{{item.dataPublicacao | date: 'dd/MM/yyyy'}} às {{item.dataPublicacao | date: 'HH:mm'}}</p> -->
+            
+            
+          </div>
+          <div class="card-footer">
+            <h6 class="card-subtitle text-center  text-muted">Por: {{item.usuario.nome}}</h6>
           </div>
         </div>
       </div>
@@ -100,7 +107,6 @@
             <h6 class="card-subtitle mb-2 text-muted">{{item.tema.descricao}}</h6>
             <p class="card-text">{{item.descricao}}</p>
             <p class="">{{item.dataPublicacao | date: 'dd/MM/yyyy'}} às {{item.dataPublicacao | date: 'HH:mm'}}</p>
-
           </div>
         </div>
       </div>
@@ -134,6 +140,12 @@
         <div class="form-group">
           <label for="texto">Texto</label>
           <textarea [(ngModel)]='postagem.descricao' class="form-control" name="texto" id="texto" cols=""
+            rows="3"></textarea>
+        </div>
+
+        <div class="form-group">
+          <label for="texto">Link da Live:</label>
+          <textarea [(ngModel)]='postagem.liveLink' class="form-control" name="liveLink" id="liveLink" cols=""
             rows="3"></textarea>
         </div>
 
