Adicionando a aba de Profile

--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -1,7 +1,8 @@
 .banner{
     background: url(https://i.imgur.com/7IPNHRa.png);
-    height: 500px;
     background-size: cover;
+    overflow-x: hidden;
+    height: 500px;
 }
 
 .banner h2{
