--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -1,39 +1,25 @@
-<div class="container-fluid">
-
-  <div class="row bg-info">
-    <div class="col-md-12 text-white">
-      <a routerLink='/inicio' class="text-white text-left">
-      <i class="- fa-angle-double-left" aria-hidden="true">inicio</i>
-      </a>
-
-      <h1 class="fs-54 text-center ">Tema</h1>
-      <h5 class="fs-18 text-center">Veja aqui todos os temas cadastrados ou
-        cadastre um novo:</h5>
-
-        <div class="row d-flex justify-content-center mt-4 mb-5">
-          <div class="col-md-3">
-            <div class="form-group">
-              <input [(ngModel)]='tema.descricao' name="descricao" type="text" class="form-control" id="descricao"
-              placeholder="Digite a descrição do tema">
-            </div>
-
-            <div class="form-group">
-              <input [(ngModel)]='tema.hashtag' name="hashtag" type="text" class="form-control" id="hashtag"
-              placeholder="#">
-            </div>
-
-            <div class="form-group">
-              <input [(ngModel)]='tema.servico' name="servico" type="text" class="form-control" id="servico"
-              placeholder="Digite o serviço">
-            </div>
-
-            <div class="d-flex justify-content-center">
-              <button class="btn btn-light" (click)='cadastrar()'>Cadastrar</button>
-            </div>
-          </div>
+<div class="container-fluid banner-tema">
+  <div class="row caixa-busca d-flex align-items-center justify-content-center">
+    <div class="col-md-7">
+      <h2 class="text-center mb-3">Compatilhe sua especialidade</h2>
+      <div class="input-busca">
+        <input type="text" class="form-control">
+        <i class="fas fa-search"></i>
+      </div>
+      <div class="row">
+        <div class="col-md-12 d-flex justify-content-center">
+          <small class="mb-3">Sugestões: Tecnologia, Construção Civil, Saúde, Música</small>
         </div>
+      </div>
+      <div class="row d-flex justify-content-center ">
+        <div class="col-md-8  d-flex justify-content-center">
+          <button class="btn btn-dark mr-3 button" data-toggle="modal"
+            data-target="#novaPostagem">Nova
+            Mentoria</button>
+          <button class="btn btn-outline-dark button" href="#postagens">Ver Postagens</button>
+        </div>
+      </div>
     </div>
-
   </div>
 </div>
 
@@ -49,7 +35,7 @@
   <div class="row mt-3 mb-5 d-flex justify-content-center">
     <div class="col-md-6">
 
-      <table class="table table-hover table-dark">
+      <table class="table table-hover table-white">
         <thead>
           <tr>
             <th scope="col">#</th>
