--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -66,8 +66,8 @@
           <div class="card-body">
             <h5 class="card-title">{{item.titulo}}</h5>
             <p class="text-center descricao">{{item.tema.descricao}}</p>
-            <!--<p class="card-text text-center">{{item.descricao}}</p>-->
-            <!-- <p class="text-center">{{item.dataPublicacao | date: 'dd/MM/yyyy'}} às {{item.dataPublicacao | date: 'HH:mm'}}</p> -->
+            <p class="card-text text-center">{{item.descricao}}</p>
+        <!--<p class="text-center">{{item.dataPublicacao | date: 'dd/MM/yyyy'}} às {{item.dataPublicacao | date: 'HH:mm'}}</p>-->
           </div>
         <div class="card-footer">
             <h6 class="card-subtitle text-center  text-muted">Por:{{item.usuario.nome}}</h6>
