--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid banner">
-  <div class="row caixa-busca d-flex align-items-center justify-content-center">    
+  <div class="row caixa-busca d-flex align-items-center justify-content-center">
     <div class="col-md-7">
       <h2 class="text-center mb-3">Explore novos caminhos</h2>
       <div class="input-busca">
         <input [(ngModel)]='postagem.descricao' type="text" class="form-control">
-        <i (click)='findByTitulo()'class="fas fa-search"></i>
+        <i (click)='findByTitulo()' class="fas fa-search"></i>
       </div>
       <div class="row">
         <div class="col-md-12 d-flex justify-content-center">
@@ -13,7 +13,8 @@
       </div>
       <div class="row d-flex justify-content-center ">
         <div class="col-md-8  d-flex justify-content-center">
-          <button *ngIf="verificacaoPerfil" class="btn btn-dark mr-3 button" data-toggle="modal" data-target="#novaPostagem">Nova
+          <button *ngIf="verificacaoPerfil" class="btn btn-dark mr-3 button" data-toggle="modal"
+            data-target="#novaPostagem">Nova
             Mentoria</button>
           <button class="btn btn-outline-dark button" href="#postagens">Ver Postagens</button>
         </div>
@@ -54,7 +55,10 @@
             <!-- <p class="text-center">{{item.dataPublicacao | date: 'dd/MM/yyyy'}} às {{item.dataPublicacao | date: 'HH:mm'}}</p> -->
           </div>
           <div class="card-footer">
-            <h6 class="card-subtitle text-center  text-muted">Por: <a [routerLink]="['/profile', item.usuario.id]">{{item.usuario.nome}} </a></h6>
+            <!-- <h6 class="card-subtitle text-center  text-muted">Por: {{item.usuario.nome}} </h6> -->
+
+            <!-- <h6 class="card-subtitle text-center  text-muted">Por: <a 
+                [routerLink]="['/profile', item.usuario.id]">{{item.usuario.nome}} </a></h6> -->
           </div>
         </div>
       </div>
