--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,19 +1,132 @@
-<div class="container-fluid banner">
+<div class="container-fluid content">
+  <div class="row ">
+    <div class="col-md-3 nav-left  p-3">
+      <div class="row  d-flex flex-column align-items-center">
+        <div class="col-md-9 m-0 p-0">
+          <div class="button-nav-left button-1 d-flex justify-content-center align-items-center">
+            <div class="col-md-2  m-0 p-0 pl-4 d-flex justify-content-center ">
+              <i class="fas fa-globe-americas"></i>
+            </div>
+            <div class="col-md-10">
+              <a href="">Todas as Postagens</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-9  m-0 p-0">
+          <div class="button-nav-left d-flex justify-content-center align-items-center">
+            <div class="col-md-2  m-0 p-0 pl-4 d-flex justify-content-center ">
+              <i class="fas fa-list"></i>
+            </div>
+            <div class="col-md-10 ">
+              <a href="">Minhas Postagens</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-9  m-0 p-0">
+          <div class="button-nav-left d-flex justify-content-center align-items-center">
+            <div class="col-md-2  m-0 p-0 pl-4 d-flex justify-content-center ">
+              <i class="fas fa-users"></i>
+            </div>
+            <div class="col-md-10 ">
+              <a href="">Grupos</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-9 m-0 p-0">
+          <div class="button-nav-left button-altertive d-flex justify-content-center align-items-center">
+            <div class="col-md-10 ">
+              <a href="">Veja mais</a>
+            </div>
+          </div>
+        </div>
+        <div class="caixa-left"></div>
+      </div>
+
+      <div class="last-post">
+        <div class="row  mt-4">
+          <div class="col-md-12 p-3 ">
+            <h5>Seus últimos posts</h5>
+          </div>
+        </div>
+        <div class="row d-flex justify-content-center mb-3 box-last-post ">
+          <div class="box-last-post d-flex justify-content-center">
+            <div class="col-md-2  d-flex justify-content-center align-items-center mr-2">
+              <img src="https://i.imgur.com/AfOVVeN.png" alt="">
+            </div>
+            <div class="col-md-8  d-flex ml-0 pl-0 justify-content-start align-items-center">
+              <h6>titulo da postagem</h6>
+            </div>
+          </div>
+        </div>
+        <div class="row d-flex justify-content-center mb-3  box-last-post ">
+          <div class="box-last-post d-flex justify-content-center">
+            <div class="col-md-2  d-flex justify-content-center align-items-center mr-2">
+              <img src="https://i.imgur.com/AfOVVeN.png" alt="">
+            </div>
+            <div class="col-md-8  d-flex ml-0 pl-0 justify-content-start align-items-center">
+              <h6>titulo da postagem</h6>
+            </div>
+          </div>
+        </div>
+        <div class="row d-flex justify-content-center mb-3  box-last-post ">
+          <div class="box-last-post d-flex justify-content-center">
+            <div class="col-md-2  d-flex justify-content-center align-items-center mr-2">
+              <img src="https://i.imgur.com/AfOVVeN.png" alt="">
+            </div>
+            <div class="col-md-8  d-flex ml-0 pl-0 justify-content-start align-items-center">
+              <h6>titulo da postagem</h6>
+            </div>
+          </div>
+        </div>
+        <div class="row d-flex justify-content-center mb-3  box-last-post ">
+          <div class="box-last-post d-flex justify-content-center">
+            <div class="col-md-2  d-flex justify-content-center align-items-center mr-2">
+              <img src="https://i.imgur.com/AfOVVeN.png" alt="">
+            </div>
+            <div class="col-md-8  d-flex ml-0 pl-0 justify-content-start align-items-center">
+              <h6>titulo da postagem</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ----------------------------------------------------------------------- -->
+    <!--                     FIM DO CARD DA LATERAL ESQUERDA                     -->
+    <!-- ----------------------------------------------------------------------- -->
+
+    <div class="col-md-6 post-center">
+      <div class="row">
+        <div class="col-md-12 perfil-post">
+          <!-- <img src="{{foto}}" alt=""> -->
+          <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 mt-5">
+          <h3 class="text-center">Lucas Cruz</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 borda post-add">
+
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col-md-3 nav-right ">
+      <h5>Mentorias</h5>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<!-- <div class="container-fluid banner">
   <div class="row caixa-busca d-flex align-items-center justify-content-center">
-    <!-- <div class="col-md-6">
-      <div class="row d-flex justify-content-center ">
-        <div class="col-md-6 text-dark">
-          <h1 class="fs-54">Seja bem vindo(a)!</h1>
-          <h5 class="fs-18">Expresse aqui os seus pensamentos e opniões!</h5>
-        </div>
-      </div>
-      <div class="row d-flex justify-content-center mt-3 mb-5">
-        <div class="col-md-6">
-          <button class="btn btn-dark mr-2 " data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
-          <a class="btn btn-outline-dark " href="#postagens">Ver Postagens</a>
-        </div>
-      </div>
-    </div> -->
     <div class="col-md-7">
       <h2 class="text-center mb-3">Explore novos caminhos</h2>
       <div class="input-busca">
@@ -29,9 +142,8 @@
       </div>
       <div class="row d-flex justify-content-center ">
         <div class="col-md-8  d-flex justify-content-center">
-          <button *ngIf="verificacaoPerfil" class="btn btn-dark mr-3 button" data-toggle="modal" data-target="#novaPostagem">Nova
+          <button *ngIf="verificacaoPerfil" class="btn btn-outline-dark button" data-toggle="modal" data-target="#novaPostagem">Nova
             Mentoria</button>
-          <button class="btn btn-outline-dark button" href="#postagens">Ver Postagens</button>
         </div>
       </div>
     </div>
@@ -67,7 +179,6 @@
             <h5 class="card-title">{{item.titulo}}</h5>
             <p class="text-center descricao">{{item.tema.descricao}}</p>
             <p class="card-text text-center">{{item.descricao}}</p>
-        <!--<p class="text-center">{{item.dataPublicacao | date: 'dd/MM/yyyy'}} às {{item.dataPublicacao | date: 'HH:mm'}}</p>-->
           </div>
         <div class="card-footer">
             <h6 class="card-subtitle text-center  text-muted">Por:{{item.usuario.nome}}</h6>
@@ -87,12 +198,11 @@
           <div class="card-body">
             <h5 class="card-title">{{item.titulo}}</h5>
             <p class="">{{item.tema.descricao}}</p>
-            <!--Teste de input-->
+
             <div class="card-head">
               <img src="{{item.liveLink}}" alt="">
             </div>
             <p class="card-text">{{item.descricao}}</p>
-            <!--<p class="">{{item.dataPublicacao | dataPubicacao: 'dd/MM/yyyy'}} às {{item.dataPublicacao | date: 'HH:mm'}}</p>-->
             <button [routerLink]="['/postagem-edit', item.id]" type="button"
               class="btn btn-outline-success mr-3">Editar</button>
             <button [routerLink]="['/postagem-delete', item.id]" type="button"
@@ -106,21 +216,20 @@
 
     <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="postagemTema-tab">
 
-      <!--Teste de barra de pesquisa por tema-->
   <div class="input-busca">
     <input type="text" class="form-control"
     placeholder="Digite um Tema" [(ngModel)]='nomeTema'
     (keyup)='findByNomeTema()'>
     <i (click)='findByTitulo()'class="fas fa-search"></i>
   </div>
-      <!--Teste -->
+
+      
       <div class="card-columns " *ngFor='let tema of listaTemas'>
         <div class="card" style="width: 18rem;" *ngFor='let item of usuario.postagem | orderBy : key : reverse'>
           <div class="card-body">
             <h5 class="card-title">{{item.titulo}}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{item.tema.descricao}}</h6>
             <p class="card-text">{{item.descricao}}</p>
-          <!-- <p class="">{{item.dataPublicacao | data: 'dd/MM/yyyy'}} às {{item.dataPublicacao | date: 'HH:mm'}}</p>-->          </div>
         </div>
       </div>
     </div>
@@ -128,8 +237,6 @@
 
 
 
-
-<!-- Modal -->
 <div class="modal fade" id="novaPostagem" data-backdrop="static" data-keyboard="false" tabindex="-1"
   aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -176,4 +283,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
