--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,90 +1,105 @@
-/* header {
-  background: rgba(26, 26, 26, 0.233);
-  width: 100%;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: absolute;
-  z-index: 100;
-}
-.logo{
-  margin-left: 5%;
-  padding: 10px;
+a .button-edit {
+  margin-left: 10px;
+  color: white;
+  font-size: 18px;
+  margin-top: 10px;
 }
 
-.logo img {
-  width: 50px;
-}
-.links {
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  width: 500px;
-  margin-left: 10%;
+.header {
+  background-color: #292929;
+  height: 54px;
 }
 
-.links a {
+.logo img{
+  width: 40px;
+}
+.header i {
+  color: white;
+}
+
+
+.header button {
+  /* border: 1px solid rgba(255, 255, 255, 0); */
+  border: none;
   color: white;
   text-transform: uppercase;
-  border-bottom: 1px solid #71eed17a;
-  font-size: 14px;
-  margin-left: 18px;
-  transition: .30s ease-in-out;
+  font-weight: 200;
 }
 
-.links a:hover {
-  text-decoration: none;
-  border-bottom: 1px solid #71eed1;
-  transform: translateY(-20%);
-  transition: .30s ease-in-out all;
-  color: #d3d3d37a;
+.header button:hover {
+  background: none;
+  border-bottom: 1px solid #8CF7B2;
+  color: rgb(255, 255, 255);
+  border: none;
 }
 
-.register {
-  display: flex;
-  margin-right: 15px;
-  height: 45px;
+img.img-profile {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+  animation: animation-profile 3s ease-in-out infinite;
 }
 
-.button-1 {
-  text-align: center;
-  background-color: #FFFFFF;
-  padding: 8px;
-  width: 115px;
-  border-radius: 30px;
-  margin-right: 5px;
-  height: 40px;
+.header h2 {
+  color: rgb(114, 55, 252);
+  font-size: 18px;
+  margin-left: 14px;
 }
 
-a.button-1 {
-  color: #00FFC2;
-  margin-left: 5px;
-  text-decoration: none;
-  transition: .3s ease-in-out;
+.icon-online {
+  width: 15px;
+  height: 15px;
+  background: rgb(36, 197, 36);
+  border-radius: 50%;
+  right: 0;
+  bottom: 17%;
+  animation: animation-profile 5s ease-in-out infinite;
 }
 
-a.button-1:hover {
-  transform: scale(105%);
-  background-color: #ffffffd3;
+.input-busca input {
+  border-radius: 20px;
+  border: none;
+  background: rgba(255, 255, 255, 0.103);
+  color: white;
+  font-weight: 300;
+  width: 250px;
+  margin-right: 10px;
+  padding: 20px;
+  height: 26px;
 }
 
-.button-2 {
-  text-align: center;
-  background: linear-gradient(45deg, #71EED0, #1FC89F);
-  padding: 8px;
-  width: 115px;
-  border-radius: 30px;
-  height: 40px;
+.input-busca input::placeholder {
+  color: rgba(255, 255, 255, 0.199);
 }
 
-a.button-2 {
-  color: #fff;
-  text-decoration: none;
-  transition: .3s ease-in-out;
+.input-busca input:focus {
+  box-shadow: none;
 }
 
-a.button-2:hover {
-  transform: scale(105%);
-  background: linear-gradient(150deg, #71EED0, #1FC89F);
-} */
+.input-busca i {
+  top: 50%;
+  right: 10%;
+  transform: translateY(-50%);
+  color: #6b6b6b;
+}
+
+
+
+
+@keyframes animation-profile{
+  0%{
+    transform: translateY(0);
+  }
+  50%{
+    transform: translateY(5%);
+  }
+  100%{
+    transform: translateY(0);
+  }
+}
+
+
+
+
+
